directory contrast fixes, event height fixes

--- a/frontend/public/static/css/fyh.css
+++ b/frontend/public/static/css/fyh.css
@@ -103,3 +103,7 @@ a {
     color: #256ADA;
 }
 
+.has-text-grey {
+    color: #6E6E6E !important;
+}
+
